--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Title and Icon -->
 
-        <title>MiroTalk a Free Secure Video Calls, Chat & Screen Sharing.</title>
+        <title>Connext a Free Secure Video Calls, Chat & Screen Sharing.</title>
         <link rel="shortcut icon" href="../images/logo.svg" />
         <link rel="apple-touch-icon" href="../images/logo.svg" />
 
@@ -83,7 +83,7 @@
                                 <div class="split-item">
                                     <div class="hero-content split-item-content center-content-mobile">
                                         <h1 class="mt-32 mb-16 reveal-from-bottom" data-reveal-delay="150">
-                                            MiroTalk<br />Free browser based Real-time video calls.<br />
+                                            Connext<br />P-2-P Decentralized video confrencing using secured blockchain network.<br />
                                             Simple, Secure, Fast.
                                         </h1>
                                         <p class="mt-0 mb-32 reveal-from-bottom" data-reveal-delay="300">
