--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -15,7 +15,7 @@
 
         <meta
             name="description"
-            content="MiroTalk powered by WebRTC, Real-time Simple Secure Fast video calls, chat and screen sharing capabilities in the browser, from your mobile or desktop."
+            content="Connext powered by WebRTC, Real-time Simple Secure Fast video calls, chat and screen sharing capabilities in the browser, from your mobile or desktop."
         />
         <meta
             name="keywords"
@@ -29,7 +29,7 @@
         <meta property="og:title" content="Click the link to make a call." />
         <meta
             property="og:description"
-            content="MiroTalk calling provides real-time HD quality and latency simply not available with traditional technology."
+            content="Connext calling provides real-time HD quality and latency simply not available with traditional technology."
         />
         <meta property="og:image" content="https://p2p.mirotalk.com/images/preview.png" />
         <meta property="og:url" content="https://p2p.mirotalk.com" />
@@ -73,6 +73,7 @@
                             </div>
                         </div>
                     </div>
+                    <w3m-button />
                 </div>
             </header>
             <main class="site-content">
@@ -84,12 +85,10 @@
                                     <div class="hero-content split-item-content center-content-mobile">
                                         <h1 class="mt-32 mb-16 reveal-from-bottom" data-reveal-delay="150">
                                             Connext<br />P-2-P Decentralized video confrencing using secured blockchain network.<br />
-                                            Simple, Secure, Fast.
+                                        
                                         </h1>
                                         <p class="mt-0 mb-32 reveal-from-bottom" data-reveal-delay="300">
-                                            Start your next video call with a single click. No download, plug-in, or
-                                            login is required. Just get straight to talking, messaging, and sharing your
-                                            screen.
+                                          Our decentralized platform offers unparalleled security and privacy, powered by WebRTC and React. Say goodbye to centralized servers and hello to direct peer-to-peer connections. Join us in revolutionizing the way the world connects. 
                                         </p>
                                     </div>
                                     <style>
@@ -116,7 +115,7 @@
                             </div>
                             <div class="cta-action">
                                 <div class="mb-0">
-                                    <label class="form-label screen-reader" for="roomName">mirotalk</label>
+                                    <label class="form-label screen-reader" for="roomName">Connext</label>
                                     <div class="form-group-desktop">
                                         <input
                                             id="roomName"
@@ -198,7 +197,7 @@
                                         Unlimited number of conference rooms without call time limitation
                                     </h2>
                                     <p class="m-0">
-                                        MiroTalk is built radically differently. We left behind slow bulky servers,
+                                        Connext is built radically differently. We left behind slow bulky servers,
                                         opting for peer-to-peer calling. We engineered a platform with maximum video
                                         quality lowest latency that makes your calls crystal clear.
                                     </p>
@@ -342,7 +341,7 @@
                                         <div class="features-tiles-item-content">
                                             <h4 class="mt-0 mb-8">Total Privacy</h4>
                                             <p class="m-0 text-sm">
-                                                Data stays between you and your participants. MiroTalk doesn't collect
+                                                Data stays between you and your participants. Connext doesn't collect
                                                 or share personal information. It's built for privacy first.
                                             </p>
                                         </div>
@@ -374,45 +373,14 @@
                     </div>
                 </section>
 
-                <section id="browsers" class="team section center-content">
-                    <div class="container">
-                        <div class="team-inner section-inner has-top-divider">
-                            <div class="section-header center-content reveal-from-bottom">
-                                <div class="container-xs">
-                                    <h2 class="mt-0 mb-16">Supported Browsers</h2>
-                                </div>
-                            </div>
-                            <div class="tiles-wrap">
-                                <div class="tiles-item reveal-from-bottom">
-                                    <div class="tiles-item-inner">
-                                        <div class="team-item-header">
-                                            <div class="team-item-image mb-24">
-                                                <img
-                                                    src="../images/browsers.png"
-                                                    alt="Supported Browsers"
-                                                    width="auto"
-                                                    height="auto"
-                                                />
-                                            </div>
-                                        </div>
-                                        <div class="team-item-content">
-                                            <h5 class="team-item-name mt-0 mb-4">
-                                                Chrome, Edge, Firefox, Opera, Safari, Brave and more.
-                                            </h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
+                
 
                 <section id="teams" class="team section center-content">
                     <div class="container">
                         <div class="team-inner section-inner has-top-divider">
                             <div class="section-header center-content reveal-from-bottom">
                                 <div class="container-xs">
-                                    <h2 class="mt-0 mb-16">Meet the team</h2>
+                                    <h2 class="mt-0 mb-16">Meet the MasterOGs</h2>
                                 </div>
                             </div>
 
@@ -423,7 +391,7 @@
                                         <div class="team-item-header">
                                             <div class="team-item-image mb-24">
                                                 <img
-                                                    src="../images/miroslav-pejic.png"
+                                                    src="../images/deeps.jpg"
                                                     alt="Team member author"
                                                     width="180"
                                                     height="180"
@@ -434,9 +402,9 @@
                                         <div class="team-item-content">
                                             <a
                                                 target="_blank"
-                                                href="https://www.linkedin.com/in/miroslav-pejic-976a07101/"
+                                                href="https://github.com/deepanshu2k3"
                                             >
-                                                <h5 class="team-item-name mt-0 mb-4">Miroslav Pejic</h5>
+                                                <h5 class="team-item-name mt-0 mb-4">Deepanshu</h5>
                                             </a>
                                             <div class="team-item-role text-xxs fw-500 tt-u text-color-primary mb-8">
                                                 Full Stack Developer
@@ -454,7 +422,7 @@
                         <div class="section-inner has-top-divider">
                             <div class="container-xs">
                                 <div class="section-header center-content">
-                                    <h2 class="m-0">Try an easier, more secure way of calling.</h2>
+                                    <h2 class="m-0">Try an easier, more secure way of calling with connext!</h2>
                                 </div>
                                 <div class="center-content">
                                     <a
@@ -472,147 +440,9 @@
                     </div>
                 </section>
 
-                <section id="poweredBy" class="clients section">
-                    <div class="container">
-                        <h4 class="mt-24" style="text-align: center; color: grey">Powered by</h4>
-                        <div class="clients-inner section-inner has-animations has-top-divider has-bottom-divider">
-                            <ul class="list-reset">
-                                <li class="reveal-from-top" data-reveal-delay="150">
-                                    <a href="https://hetzner.cloud/?ref=XdRifCzCK3bn" target="_blank"
-                                        ><img
-                                            class="clients-size-logo"
-                                            src="../sponsors/Hetzner.png"
-                                            alt="Powered by Hetzner"
-                                    /></a>
-                                </li>
-                                <li class="reveal-from-top" data-reveal-delay="300">
-                                    <a href="https://www.dpbolvw.net/click-101027391-14462707" target="_blank"
-                                        ><img
-                                            class="clients-size-logo"
-                                            src="../advertisers/ContaboLogo.png"
-                                            alt="Powered by Contabo"
-                                    /></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
+               
 
-                <section id="sponsors" class="clients section">
-                    <div class="container">
-                        <h2 class="mt-24" style="text-align: center">Our sponsors</h2>
-                        <div class="clients-inner section-inner has-animations has-top-divider has-bottom-divider">
-                            <ul class="list-reset">
-                                <li class="reveal-from-top" data-reveal-delay="150">
-                                    <div class="clients-logo">
-                                        <a href="https://broadcastx.de/" target="_blank"
-                                            ><img
-                                                class="clients-size-logo"
-                                                src="../sponsors/BroadcastX.png"
-                                                alt="BroadcastX"
-                                        /></a>
-                                    </div>
-                                </li>
-                                <li class="reveal-from-top" data-reveal-delay="300">
-                                    <div class="clients-logo">
-                                        <a href="https://hetzner.cloud/?ref=XdRifCzCK3bn" target="_blank"
-                                            ><img class="clients-size-logo" src="../sponsors/Hetzner.png" alt="Hetzner"
-                                        /></a>
-                                    </div>
-                                </li>
-                                <li class="reveal-from-top" data-reveal-delay="450">
-                                    <div class="clients-logo">
-                                        <a style="cursor: pointer" onclick="adultContent()"
-                                            ><img
-                                                class="clients-size-logo"
-                                                src="../sponsors/LuvLounge.png"
-                                                alt="LuvLounge"
-                                        /></a>
-                                    </div>
-                                </li>
-                                <script>
-                                    function adultContent() {
-                                        if (
-                                            confirm(
-                                                '18+ WARNING! ADULTS ONLY!\n\nExplicit material for viewing by adults 18 years of age or older. You must be at least 18 years old to access to this site!\n\nProceeding you are agree and confirm to have 18+ year.',
-                                            )
-                                        ) {
-                                            window.open('https://luvlounge.ca', '_blank');
-                                        }
-                                    }
-                                </script>
-                                <li class="reveal-from-top" data-reveal-delay="600">
-                                    <div class="clients-logo">
-                                        <a href="https://www.questionpro.com" target="_blank"
-                                            ><img
-                                                class="clients-size-logo"
-                                                src="../sponsors/QuestionPro.png"
-                                                alt="QuestionPro"
-                                        /></a>
-                                    </div>
-                                </li>
-                                <li class="reveal-from-top" data-reveal-delay="750">
-                                    <div class="clients-logo">
-                                        <a href="https://www.browserstack.com" target="_blank"
-                                            ><img
-                                                class="clients-size-logo"
-                                                src="../sponsors/BrowserStack.png"
-                                                alt="BrowserStack"
-                                        /></a>
-                                    </div>
-                                </li>
-                                <li class="reveal-from-top" data-reveal-delay="900">
-                                    <div class="clients-logo">
-                                        <a href="https://crystalsound.ai" target="_blank"
-                                            ><img
-                                                class="clients-size-logo"
-                                                src="../sponsors/CrystalSound.png"
-                                                alt="CrystalSound"
-                                        /></a>
-                                    </div>
-                                </li>
-                                <li class="reveal-from-top" data-reveal-delay="1050">
-                                    <div class="clients-logo">
-                                        <a href="https://cloudron.io" target="_blank"
-                                            ><img
-                                                class="clients-size-logo"
-                                                src="../sponsors/Cloudron.png"
-                                                alt="Cloudron"
-                                        /></a>
-                                    </div>
-                                </li>
-                                <li class="reveal-from-top" data-reveal-delay="1050">
-                                    <div class="clients-logo">
-                                        <a href="https://kiquix.com" target="_blank"
-                                            ><img class="clients-size-logo" src="../sponsors/Kiquix.png" alt="Kiquix"
-                                        /></a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
-
-                <section id="advertisers" class="clients section">
-                    <div class="container">
-                        <h2 class="mt-24" style="text-align: center">Our advertisers</h2>
-                        <div class="clients-inner section-inner has-animations has-top-divider has-bottom-divider">
-                            <ul class="list-reset">
-                                <li class="reveal-from-top" data-reveal-delay="150">
-                                    <div class="clients-logo">
-                                        <a href="https://www.dpbolvw.net/click-101027391-14462707" target="_blank"
-                                            ><img
-                                                class="clients-size-logo"
-                                                src="../advertisers/Contabo.png"
-                                                alt="Contabo"
-                                        /></a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
-            </main>
+                            </main>
 
             <footer id="footer" class="site-footer center-content-mobile">
                 <div class="container">
@@ -721,13 +551,13 @@
                                         <a href="/privacy">Privacy Policy</a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="https://www.linkedin.com/in/miroslav-pejic-976a07101/"
-                                            >Contact: Miroslav Pejic</a
+                                        <a target="_blank" href="https://x.com/deepanshu2k3"
+                                            >Contact: Deepanshu</a
                                         >
                                     </li>
                                 </ul>
                             </nav>
-                            <div class="footer-copyright">&copy; 2024 MiroTalk, all rights reserved</div>
+                            <div class="footer-copyright">&copy; 2024 Connext, all rights reserved</div>
                         </div>
                     </div>
                 </div>
@@ -739,5 +569,6 @@
         <script defer src="../js/landing.js"></script>
         <script defer src="../js/newRoom.js"></script>
         <script async defer src="https://buttons.github.io/buttons.js"></script>
+        <script type="module" src="main.ts"></script>
     </body>
 </html>
