--- a/public/views/login.html
+++ b/public/views/login.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Title and Icon -->
 
-        <title>MiroTalk P2P - Host Protected login required.</title>
+        <title>Connext - Host Protected login required.</title>
         <link rel="shortcut icon" href="../images/logo.svg" />
         <link rel="apple-touch-icon" href="../images/logo.svg" />
 
@@ -322,7 +322,7 @@
                                     </li>
                                 </ul>
                             </nav>
-                            <div class="footer-copyright">&copy; 2024 MiroTalk, all rights reserved</div>
+                            <div class="footer-copyright">&copy; 2024 Connext, all rights reserved</div>
                         </div>
                     </div>
                 </div>
