--- a/public/views/newcall.html
+++ b/public/views/newcall.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Title and Icon -->
 
-        <title>MiroTalk - Create your Room name and start the new call.</title>
+        <title>Connext - Create your Room name and start the new call.</title>
         <link rel="shortcut icon" href="../images/logo.svg" />
         <link rel="apple-touch-icon" href="../images/logo.svg" />
 
@@ -114,7 +114,7 @@
                             </div>
                             <div class="cta-action">
                                 <div class="mb-0">
-                                    <label class="form-label screen-reader" for="roomName">mirotalk</label>
+                                    <label class="form-label screen-reader" for="roomName">Connext</label>
                                     <div class="form-group-desktop">
                                         <input
                                             id="roomName"
